workloads/flashchat-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flashchat-service
  namespace: flashchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flashchat-service
  template:
    metadata:
      labels:
        app: flashchat-service
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: flashchat-service
        image: mcntrn/flashchat-service:v0.3.3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8080
