workloads/flashchat-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flashchat-service
  namespace: flashchat
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: flashchat-service
